// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-text-field renders default html 1`] = `
<c-text-field label="Label" value="Here is text">
  <!---->
  <c-input hint="" input-id="Label_1" label="Label" rows="1" valid="" validation="Required field" value="Here is text">
    <input class="c-input__input c-input__input--filled" id="Label_1" type="text" value="Here is text">
  </c-input>
</c-text-field>
`;

exports[`c-text-field renders number input 1`] = `
<c-text-field hint="Insert number between 1-10" label="Label" max="10" min="1" required="" step="1" type="number" value="5">
  <!---->
  <c-input hint="Insert number between 1-10" input-id="Label_4" label="Label" required="" rows="1" type="number" valid="" validation="Required field" value="5">
    <input class="c-input__input c-input__input--filled" id="Label_4" max="10" min="1" step="1" type="number" value="5">
  </c-input>
</c-text-field>
`;

exports[`c-text-field renders required asterisk 1`] = `
<c-text-field label="Label" required="" value="Here is text">
  <!---->
  <c-input hint="" input-id="Label_3" label="Label" required="" rows="1" valid="" validation="Required field" value="Here is text">
    <input class="c-input__input c-input__input--filled" id="Label_3" type="text" value="Here is text">
  </c-input>
</c-text-field>
`;

exports[`c-text-field renders shadow variant 1`] = `
<c-text-field placeholder="Title" shadow="" value="Here is text">
  <!---->
  <c-input hint="" input-id="Title_2" placeholder="Title" rows="1" shadow="" valid="" validation="Required field" value="Here is text">
    <input class="c-input__input c-input__input--filled" id="Title_2" type="text" value="Here is text">
  </c-input>
</c-text-field>
`;
